Adding the ability to set seeds from the command line. Also added logging (in the header and stdout) to save seeds

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 GrB-mxm-timer
 el-generator
 stats_graph500_bin
+graph_analyzer
 make.inc
 *.cdc
 *.hdd
@@ -12,3 +13,4 @@ make.inc
 GPATH
 GRTAGS
 GTAGS
+.vscode
